test/pass/show/show_enums_variants.lly
var a = Some(Some(10))

match a: {
    case Some(s):
        match s: {
            case Some(s2):
            case None:
        }
    case None:
}

show(__main__)
