test/fail/match/match_bad_decompose.lly
#[
SyntaxError: Expected '(', not :.
    from match_bad_decompose.lly:14
]#

enum Option[A] {
    Some(A)
    None
}

var v = None

match v: {
    case Some:
    case None:
}
